package service

import (
	"github.com/annelo/go-grpc-server/pkg/protocol/game"
)

// canPlaceBlock checks whether a player can place a block at the given position.
func (s *WorldService) canPlaceBlock(playerID string, position *game.Position, blockType int32) bool {
	// TODO: implement placement rules
	return true
}

// handleBlockAction processes a block action from a player.
func (s *WorldService) handleBlockAction(playerID string, action *game.BlockAction) {
	// TODO: migrate block action logic here
}

// handleChatMessage processes a chat message from a player.
func (s *WorldService) handleChatMessage(playerID string, chatMsg *game.ChatMessage) {
	// TODO: migrate chat handling logic here
}

// handlePing processes a ping from a player and responds with a pong.
func (s *WorldService) handlePing(playerID string, ping *game.Ping) {
	// TODO: migrate ping handling logic here
}
